feat: add new features and routes to community post module
